front-20161220/libpicture/Linux.0/Pictures_y.output
Terminals unused in grammar

   NONSENSE


State 25 conflicts: 3 shift/reduce
State 31 conflicts: 3 shift/reduce
State 49 conflicts: 6 shift/reduce
State 50 conflicts: 6 shift/reduce


Grammar

    0 $accept: Pictures $end

    1 Pictures: OPTMORE_Picture

    2 Direction: Lsym
    3          | Rsym
    4          | Usym
    5          | Dsym
    6          | Csym

    7 Picture: Floatsym Floatsym Floatsym Floatsym
    8        | Floatsym Floatsym Floatsym Floatsym rectanglesym
    9        | Floatsym Floatsym Floatsym Floatsym circlesym
   10        | Floatsym Floatsym Floatsym Floatsym arcsym Floatsym Floatsym
   11        | Floatsym Floatsym Floatsym Floatsym arctopopsym Boolsym Boolsym
   12        | Floatsym Floatsym Floatsym Floatsym linesym
   13        | Floatsym Floatsym Floatsym Floatsym trianglesym eofillsym Direction
   14        | Floatsym Floatsym Floatsym Floatsym openparsym Stringsym closeparsym Identsym
   15        | Floatsym Floatsym Floatsym Floatsym ALT_ORspacesym_Picture_SEP_Direction_ENDORsym_NL
   16        | Floatsym Floatsym Floatsym Floatsym ALT_ANDspacesym_Picture_SEP_Direction_ENDANDsym_NL
   17        | Floatsym Floatsym Floatsym Floatsym ALTspacesym Picture Picture Boolsym ENDALTsym
   18        | Floatsym Floatsym Floatsym Floatsym MORE_Picture

   19 OPTMORE_Picture: %empty
   20                | Picture OPTMORE_Picture

   21 ALT_ORspacesym_Picture_SEP_Direction_ENDORsym_NL: ORspacesym Picture
   22                                                 | ORspacesym Picture Direction ENDORsym ALT_ORspacesym_Picture_SEP_Direction_ENDORsym_NL

   23 ALT_ANDspacesym_Picture_SEP_Direction_ENDANDsym_NL: ANDspacesym Picture
   24                                                   | ANDspacesym Picture Direction ENDANDsym ALT_ANDspacesym_Picture_SEP_Direction_ENDANDsym_NL

   25 MORE_Picture: Picture
   26             | Picture MORE_Picture

   27 Pictures: hole_Pictures
   28         | start_Pictures Pictures

   29 Direction: hole_Direction

   30 Pictures: start_Direction Direction

   31 Picture: hole_Picture

   32 Pictures: start_Picture Picture

   33 OPTMORE_Picture: hole_OPTMORE_Picture

   34 Pictures: start_OPTMORE_Picture OPTMORE_Picture

   35 MORE_Picture: hole_MORE_Picture

   36 Pictures: start_MORE_Picture MORE_Picture


Terminals, with rules where they appear

$end (0) 0
error (256)
NONSENSE (258)
rectanglesym (259) 8
circlesym (260) 9
arcsym (261) 10
arctopopsym (262) 11
linesym (263) 12
trianglesym (264) 13
eofillsym (265) 13
Lsym (266) 2
Rsym (267) 3
Usym (268) 4
Dsym (269) 5
Csym (270) 6
openparsym (271) 14
closeparsym (272) 14
ORspacesym (273) 21 22
ENDORsym (274) 22
ANDspacesym (275) 23 24
ENDANDsym (276) 24
ALTspacesym (277) 17
ENDALTsym (278) 17
Boolsym (279) 11 17
Floatsym (280) 7 8 9 10 11 12 13 14 15 16 17 18
Stringsym (281) 14
Identsym (282) 14
hole_Pictures (283) 27
start_Pictures (284) 28
hole_Direction (285) 29
start_Direction (286) 30
hole_Picture (287) 31
start_Picture (288) 32
hole_OPTMORE_Picture (289) 33
start_OPTMORE_Picture (290) 34
hole_MORE_Picture (291) 35
start_MORE_Picture (292) 36


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
Pictures (39)
    on left: 1 27 28 30 32 34 36, on right: 0 28
Direction (40)
    on left: 2 3 4 5 6 29, on right: 13 22 24 30
Picture (41)
    on left: 7 8 9 10 11 12 13 14 15 16 17 18 31, on right: 17 20 21
    22 23 24 25 26 32
OPTMORE_Picture (42)
    on left: 19 20 33, on right: 1 20 34
ALT_ORspacesym_Picture_SEP_Direction_ENDORsym_NL (43)
    on left: 21 22, on right: 15 22
ALT_ANDspacesym_Picture_SEP_Direction_ENDANDsym_NL (44)
    on left: 23 24, on right: 16 24
MORE_Picture (45)
    on left: 25 26 35, on right: 18 26 36


State 0

    0 $accept: . Pictures $end

    Floatsym               shift, and go to state 1
    hole_Pictures          shift, and go to state 2
    start_Pictures         shift, and go to state 3
    start_Direction        shift, and go to state 4
    hole_Picture           shift, and go to state 5
    start_Picture          shift, and go to state 6
    hole_OPTMORE_Picture   shift, and go to state 7
    start_OPTMORE_Picture  shift, and go to state 8
    start_MORE_Picture     shift, and go to state 9

    $default  reduce using rule 19 (OPTMORE_Picture)

    Pictures         go to state 10
    Picture          go to state 11
    OPTMORE_Picture  go to state 12


State 1

    7 Picture: Floatsym . Floatsym Floatsym Floatsym
    8        | Floatsym . Floatsym Floatsym Floatsym rectanglesym
    9        | Floatsym . Floatsym Floatsym Floatsym circlesym
   10        | Floatsym . Floatsym Floatsym Floatsym arcsym Floatsym Floatsym
   11        | Floatsym . Floatsym Floatsym Floatsym arctopopsym Boolsym Boolsym
   12        | Floatsym . Floatsym Floatsym Floatsym linesym
   13        | Floatsym . Floatsym Floatsym Floatsym trianglesym eofillsym Direction
   14        | Floatsym . Floatsym Floatsym Floatsym openparsym Stringsym closeparsym Identsym
   15        | Floatsym . Floatsym Floatsym Floatsym ALT_ORspacesym_Picture_SEP_Direction_ENDORsym_NL
   16        | Floatsym . Floatsym Floatsym Floatsym ALT_ANDspacesym_Picture_SEP_Direction_ENDANDsym_NL
   17        | Floatsym . Floatsym Floatsym Floatsym ALTspacesym Picture Picture Boolsym ENDALTsym
   18        | Floatsym . Floatsym Floatsym Floatsym MORE_Picture

    Floatsym  shift, and go to state 13


State 2

   27 Pictures: hole_Pictures .

    $default  reduce using rule 27 (Pictures)


State 3

   28 Pictures: start_Pictures . Pictures

    Floatsym               shift, and go to state 1
    hole_Pictures          shift, and go to state 2
    start_Pictures         shift, and go to state 3
    start_Direction        shift, and go to state 4
    hole_Picture           shift, and go to state 5
    start_Picture          shift, and go to state 6
    hole_OPTMORE_Picture   shift, and go to state 7
    start_OPTMORE_Picture  shift, and go to state 8
    start_MORE_Picture     shift, and go to state 9

    $default  reduce using rule 19 (OPTMORE_Picture)

    Pictures         go to state 14
    Picture          go to state 11
    OPTMORE_Picture  go to state 12


State 4

   30 Pictures: start_Direction . Direction

    Lsym            shift, and go to state 15
    Rsym            shift, and go to state 16
    Usym            shift, and go to state 17
    Dsym            shift, and go to state 18
    Csym            shift, and go to state 19
    hole_Direction  shift, and go to state 20

    Direction  go to state 21


State 5

   31 Picture: hole_Picture .

    $default  reduce using rule 31 (Picture)


State 6

   32 Pictures: start_Picture . Picture

    Floatsym      shift, and go to state 1
    hole_Picture  shift, and go to state 5

    Picture  go to state 22


State 7

   33 OPTMORE_Picture: hole_OPTMORE_Picture .

    $default  reduce using rule 33 (OPTMORE_Picture)


State 8

   34 Pictures: start_OPTMORE_Picture . OPTMORE_Picture

    Floatsym              shift, and go to state 1
    hole_Picture          shift, and go to state 5
    hole_OPTMORE_Picture  shift, and go to state 7

    $default  reduce using rule 19 (OPTMORE_Picture)

    Picture          go to state 11
    OPTMORE_Picture  go to state 23


State 9

   36 Pictures: start_MORE_Picture . MORE_Picture

    Floatsym           shift, and go to state 1
    hole_Picture       shift, and go to state 5
    hole_MORE_Picture  shift, and go to state 24

    Picture       go to state 25
    MORE_Picture  go to state 26


State 10

    0 $accept: Pictures . $end

    $end  shift, and go to state 27


State 11

   20 OPTMORE_Picture: Picture . OPTMORE_Picture

    Floatsym              shift, and go to state 1
    hole_Picture          shift, and go to state 5
    hole_OPTMORE_Picture  shift, and go to state 7

    $default  reduce using rule 19 (OPTMORE_Picture)

    Picture          go to state 11
    OPTMORE_Picture  go to state 28


State 12

    1 Pictures: OPTMORE_Picture .

    $default  reduce using rule 1 (Pictures)


State 13

    7 Picture: Floatsym Floatsym . Floatsym Floatsym
    8        | Floatsym Floatsym . Floatsym Floatsym rectanglesym
    9        | Floatsym Floatsym . Floatsym Floatsym circlesym
   10        | Floatsym Floatsym . Floatsym Floatsym arcsym Floatsym Floatsym
   11        | Floatsym Floatsym . Floatsym Floatsym arctopopsym Boolsym Boolsym
   12        | Floatsym Floatsym . Floatsym Floatsym linesym
   13        | Floatsym Floatsym . Floatsym Floatsym trianglesym eofillsym Direction
   14        | Floatsym Floatsym . Floatsym Floatsym openparsym Stringsym closeparsym Identsym
   15        | Floatsym Floatsym . Floatsym Floatsym ALT_ORspacesym_Picture_SEP_Direction_ENDORsym_NL
   16        | Floatsym Floatsym . Floatsym Floatsym ALT_ANDspacesym_Picture_SEP_Direction_ENDANDsym_NL
   17        | Floatsym Floatsym . Floatsym Floatsym ALTspacesym Picture Picture Boolsym ENDALTsym
   18        | Floatsym Floatsym . Floatsym Floatsym MORE_Picture

    Floatsym  shift, and go to state 29


State 14

   28 Pictures: start_Pictures Pictures .

    $default  reduce using rule 28 (Pictures)


State 15

    2 Direction: Lsym .

    $default  reduce using rule 2 (Direction)


State 16

    3 Direction: Rsym .

    $default  reduce using rule 3 (Direction)


State 17

    4 Direction: Usym .

    $default  reduce using rule 4 (Direction)


State 18

    5 Direction: Dsym .

    $default  reduce using rule 5 (Direction)


State 19

    6 Direction: Csym .

    $default  reduce using rule 6 (Direction)


State 20

   29 Direction: hole_Direction .

    $default  reduce using rule 29 (Direction)


State 21

   30 Pictures: start_Direction Direction .

    $default  reduce using rule 30 (Pictures)


State 22

   32 Pictures: start_Picture Picture .

    $default  reduce using rule 32 (Pictures)


State 23

   34 Pictures: start_OPTMORE_Picture OPTMORE_Picture .

    $default  reduce using rule 34 (Pictures)


State 24

   35 MORE_Picture: hole_MORE_Picture .

    $default  reduce using rule 35 (MORE_Picture)


State 25

   25 MORE_Picture: Picture .
   26             | Picture . MORE_Picture

    Floatsym           shift, and go to state 1
    hole_Picture       shift, and go to state 5
    hole_MORE_Picture  shift, and go to state 24

    Floatsym           [reduce using rule 25 (MORE_Picture)]
    hole_Picture       [reduce using rule 25 (MORE_Picture)]
    hole_MORE_Picture  [reduce using rule 25 (MORE_Picture)]
    $default           reduce using rule 25 (MORE_Picture)

    Picture       go to state 25
    MORE_Picture  go to state 30


State 26

   36 Pictures: start_MORE_Picture MORE_Picture .

    $default  reduce using rule 36 (Pictures)


State 27

    0 $accept: Pictures $end .

    $default  accept


State 28

   20 OPTMORE_Picture: Picture OPTMORE_Picture .

    $default  reduce using rule 20 (OPTMORE_Picture)


State 29

    7 Picture: Floatsym Floatsym Floatsym . Floatsym
    8        | Floatsym Floatsym Floatsym . Floatsym rectanglesym
    9        | Floatsym Floatsym Floatsym . Floatsym circlesym
   10        | Floatsym Floatsym Floatsym . Floatsym arcsym Floatsym Floatsym
   11        | Floatsym Floatsym Floatsym . Floatsym arctopopsym Boolsym Boolsym
   12        | Floatsym Floatsym Floatsym . Floatsym linesym
   13        | Floatsym Floatsym Floatsym . Floatsym trianglesym eofillsym Direction
   14        | Floatsym Floatsym Floatsym . Floatsym openparsym Stringsym closeparsym Identsym
   15        | Floatsym Floatsym Floatsym . Floatsym ALT_ORspacesym_Picture_SEP_Direction_ENDORsym_NL
   16        | Floatsym Floatsym Floatsym . Floatsym ALT_ANDspacesym_Picture_SEP_Direction_ENDANDsym_NL
   17        | Floatsym Floatsym Floatsym . Floatsym ALTspacesym Picture Picture Boolsym ENDALTsym
   18        | Floatsym Floatsym Floatsym . Floatsym MORE_Picture

    Floatsym  shift, and go to state 31


State 30

   26 MORE_Picture: Picture MORE_Picture .

    $default  reduce using rule 26 (MORE_Picture)


State 31

    7 Picture: Floatsym Floatsym Floatsym Floatsym .
    8        | Floatsym Floatsym Floatsym Floatsym . rectanglesym
    9        | Floatsym Floatsym Floatsym Floatsym . circlesym
   10        | Floatsym Floatsym Floatsym Floatsym . arcsym Floatsym Floatsym
   11        | Floatsym Floatsym Floatsym Floatsym . arctopopsym Boolsym Boolsym
   12        | Floatsym Floatsym Floatsym Floatsym . linesym
   13        | Floatsym Floatsym Floatsym Floatsym . trianglesym eofillsym Direction
   14        | Floatsym Floatsym Floatsym Floatsym . openparsym Stringsym closeparsym Identsym
   15        | Floatsym Floatsym Floatsym Floatsym . ALT_ORspacesym_Picture_SEP_Direction_ENDORsym_NL
   16        | Floatsym Floatsym Floatsym Floatsym . ALT_ANDspacesym_Picture_SEP_Direction_ENDANDsym_NL
   17        | Floatsym Floatsym Floatsym Floatsym . ALTspacesym Picture Picture Boolsym ENDALTsym
   18        | Floatsym Floatsym Floatsym Floatsym . MORE_Picture

    rectanglesym       shift, and go to state 32
    circlesym          shift, and go to state 33
    arcsym             shift, and go to state 34
    arctopopsym        shift, and go to state 35
    linesym            shift, and go to state 36
    trianglesym        shift, and go to state 37
    openparsym         shift, and go to state 38
    ORspacesym         shift, and go to state 39
    ANDspacesym        shift, and go to state 40
    ALTspacesym        shift, and go to state 41
    Floatsym           shift, and go to state 1
    hole_Picture       shift, and go to state 5
    hole_MORE_Picture  shift, and go to state 24

    Floatsym           [reduce using rule 7 (Picture)]
    hole_Picture       [reduce using rule 7 (Picture)]
    hole_MORE_Picture  [reduce using rule 7 (Picture)]
    $default           reduce using rule 7 (Picture)

    Picture                                             go to state 25
    ALT_ORspacesym_Picture_SEP_Direction_ENDORsym_NL    go to state 42
    ALT_ANDspacesym_Picture_SEP_Direction_ENDANDsym_NL  go to state 43
    MORE_Picture                                        go to state 44


State 32

    8 Picture: Floatsym Floatsym Floatsym Floatsym rectanglesym .

    $default  reduce using rule 8 (Picture)


State 33

    9 Picture: Floatsym Floatsym Floatsym Floatsym circlesym .

    $default  reduce using rule 9 (Picture)


State 34

   10 Picture: Floatsym Floatsym Floatsym Floatsym arcsym . Floatsym Floatsym

    Floatsym  shift, and go to state 45


State 35

   11 Picture: Floatsym Floatsym Floatsym Floatsym arctopopsym . Boolsym Boolsym

    Boolsym  shift, and go to state 46


State 36

   12 Picture: Floatsym Floatsym Floatsym Floatsym linesym .

    $default  reduce using rule 12 (Picture)


State 37

   13 Picture: Floatsym Floatsym Floatsym Floatsym trianglesym . eofillsym Direction

    eofillsym  shift, and go to state 47


State 38

   14 Picture: Floatsym Floatsym Floatsym Floatsym openparsym . Stringsym closeparsym Identsym

    Stringsym  shift, and go to state 48


State 39

   21 ALT_ORspacesym_Picture_SEP_Direction_ENDORsym_NL: ORspacesym . Picture
   22                                                 | ORspacesym . Picture Direction ENDORsym ALT_ORspacesym_Picture_SEP_Direction_ENDORsym_NL

    Floatsym      shift, and go to state 1
    hole_Picture  shift, and go to state 5

    Picture  go to state 49


State 40

   23 ALT_ANDspacesym_Picture_SEP_Direction_ENDANDsym_NL: ANDspacesym . Picture
   24                                                   | ANDspacesym . Picture Direction ENDANDsym ALT_ANDspacesym_Picture_SEP_Direction_ENDANDsym_NL

    Floatsym      shift, and go to state 1
    hole_Picture  shift, and go to state 5

    Picture  go to state 50


State 41

   17 Picture: Floatsym Floatsym Floatsym Floatsym ALTspacesym . Picture Picture Boolsym ENDALTsym

    Floatsym      shift, and go to state 1
    hole_Picture  shift, and go to state 5

    Picture  go to state 51


State 42

   15 Picture: Floatsym Floatsym Floatsym Floatsym ALT_ORspacesym_Picture_SEP_Direction_ENDORsym_NL .

    $default  reduce using rule 15 (Picture)


State 43

   16 Picture: Floatsym Floatsym Floatsym Floatsym ALT_ANDspacesym_Picture_SEP_Direction_ENDANDsym_NL .

    $default  reduce using rule 16 (Picture)


State 44

   18 Picture: Floatsym Floatsym Floatsym Floatsym MORE_Picture .

    $default  reduce using rule 18 (Picture)


State 45

   10 Picture: Floatsym Floatsym Floatsym Floatsym arcsym Floatsym . Floatsym

    Floatsym  shift, and go to state 52


State 46

   11 Picture: Floatsym Floatsym Floatsym Floatsym arctopopsym Boolsym . Boolsym

    Boolsym  shift, and go to state 53


State 47

   13 Picture: Floatsym Floatsym Floatsym Floatsym trianglesym eofillsym . Direction

    Lsym            shift, and go to state 15
    Rsym            shift, and go to state 16
    Usym            shift, and go to state 17
    Dsym            shift, and go to state 18
    Csym            shift, and go to state 19
    hole_Direction  shift, and go to state 20

    Direction  go to state 54


State 48

   14 Picture: Floatsym Floatsym Floatsym Floatsym openparsym Stringsym . closeparsym Identsym

    closeparsym  shift, and go to state 55


State 49

   21 ALT_ORspacesym_Picture_SEP_Direction_ENDORsym_NL: ORspacesym Picture .
   22                                                 | ORspacesym Picture . Direction ENDORsym ALT_ORspacesym_Picture_SEP_Direction_ENDORsym_NL

    Lsym            shift, and go to state 15
    Rsym            shift, and go to state 16
    Usym            shift, and go to state 17
    Dsym            shift, and go to state 18
    Csym            shift, and go to state 19
    hole_Direction  shift, and go to state 20

    Lsym            [reduce using rule 21 (ALT_ORspacesym_Picture_SEP_Direction_ENDORsym_NL)]
    Rsym            [reduce using rule 21 (ALT_ORspacesym_Picture_SEP_Direction_ENDORsym_NL)]
    Usym            [reduce using rule 21 (ALT_ORspacesym_Picture_SEP_Direction_ENDORsym_NL)]
    Dsym            [reduce using rule 21 (ALT_ORspacesym_Picture_SEP_Direction_ENDORsym_NL)]
    Csym            [reduce using rule 21 (ALT_ORspacesym_Picture_SEP_Direction_ENDORsym_NL)]
    hole_Direction  [reduce using rule 21 (ALT_ORspacesym_Picture_SEP_Direction_ENDORsym_NL)]
    $default        reduce using rule 21 (ALT_ORspacesym_Picture_SEP_Direction_ENDORsym_NL)

    Direction  go to state 56


State 50

   23 ALT_ANDspacesym_Picture_SEP_Direction_ENDANDsym_NL: ANDspacesym Picture .
   24                                                   | ANDspacesym Picture . Direction ENDANDsym ALT_ANDspacesym_Picture_SEP_Direction_ENDANDsym_NL

    Lsym            shift, and go to state 15
    Rsym            shift, and go to state 16
    Usym            shift, and go to state 17
    Dsym            shift, and go to state 18
    Csym            shift, and go to state 19
    hole_Direction  shift, and go to state 20

    Lsym            [reduce using rule 23 (ALT_ANDspacesym_Picture_SEP_Direction_ENDANDsym_NL)]
    Rsym            [reduce using rule 23 (ALT_ANDspacesym_Picture_SEP_Direction_ENDANDsym_NL)]
    Usym            [reduce using rule 23 (ALT_ANDspacesym_Picture_SEP_Direction_ENDANDsym_NL)]
    Dsym            [reduce using rule 23 (ALT_ANDspacesym_Picture_SEP_Direction_ENDANDsym_NL)]
    Csym            [reduce using rule 23 (ALT_ANDspacesym_Picture_SEP_Direction_ENDANDsym_NL)]
    hole_Direction  [reduce using rule 23 (ALT_ANDspacesym_Picture_SEP_Direction_ENDANDsym_NL)]
    $default        reduce using rule 23 (ALT_ANDspacesym_Picture_SEP_Direction_ENDANDsym_NL)

    Direction  go to state 57


State 51

   17 Picture: Floatsym Floatsym Floatsym Floatsym ALTspacesym Picture . Picture Boolsym ENDALTsym

    Floatsym      shift, and go to state 1
    hole_Picture  shift, and go to state 5

    Picture  go to state 58


State 52

   10 Picture: Floatsym Floatsym Floatsym Floatsym arcsym Floatsym Floatsym .

    $default  reduce using rule 10 (Picture)


State 53

   11 Picture: Floatsym Floatsym Floatsym Floatsym arctopopsym Boolsym Boolsym .

    $default  reduce using rule 11 (Picture)


State 54

   13 Picture: Floatsym Floatsym Floatsym Floatsym trianglesym eofillsym Direction .

    $default  reduce using rule 13 (Picture)


State 55

   14 Picture: Floatsym Floatsym Floatsym Floatsym openparsym Stringsym closeparsym . Identsym

    Identsym  shift, and go to state 59


State 56

   22 ALT_ORspacesym_Picture_SEP_Direction_ENDORsym_NL: ORspacesym Picture Direction . ENDORsym ALT_ORspacesym_Picture_SEP_Direction_ENDORsym_NL

    ENDORsym  shift, and go to state 60


State 57

   24 ALT_ANDspacesym_Picture_SEP_Direction_ENDANDsym_NL: ANDspacesym Picture Direction . ENDANDsym ALT_ANDspacesym_Picture_SEP_Direction_ENDANDsym_NL

    ENDANDsym  shift, and go to state 61


State 58

   17 Picture: Floatsym Floatsym Floatsym Floatsym ALTspacesym Picture Picture . Boolsym ENDALTsym

    Boolsym  shift, and go to state 62


State 59

   14 Picture: Floatsym Floatsym Floatsym Floatsym openparsym Stringsym closeparsym Identsym .

    $default  reduce using rule 14 (Picture)


State 60

   22 ALT_ORspacesym_Picture_SEP_Direction_ENDORsym_NL: ORspacesym Picture Direction ENDORsym . ALT_ORspacesym_Picture_SEP_Direction_ENDORsym_NL

    ORspacesym  shift, and go to state 39

    ALT_ORspacesym_Picture_SEP_Direction_ENDORsym_NL  go to state 63


State 61

   24 ALT_ANDspacesym_Picture_SEP_Direction_ENDANDsym_NL: ANDspacesym Picture Direction ENDANDsym . ALT_ANDspacesym_Picture_SEP_Direction_ENDANDsym_NL

    ANDspacesym  shift, and go to state 40

    ALT_ANDspacesym_Picture_SEP_Direction_ENDANDsym_NL  go to state 64


State 62

   17 Picture: Floatsym Floatsym Floatsym Floatsym ALTspacesym Picture Picture Boolsym . ENDALTsym

    ENDALTsym  shift, and go to state 65


State 63
